# clawdchat-mcp

./: .env.example  .gitignore  CLAUDE.md  DEPLOYMENT.md  LICENSE  README.md  TEST_REPORT_deploy_remote.md  deploy.sh  main.py  mcp.sh  pyproject.toml
readme/: README_ja.md  README_zh.md
src/clawdchat_mcp/: __init__.py  api_client.py  auth_provider.py  config.py  server.py  stdio_auth.py  storage.py
src/clawdchat_mcp/templates/: login.html  select_agent.html
test/: conftest.py  setup_accounts.py  test_01_profile.py  test_02_posts.py  test_03_comments.py  test_04_circles.py  test_05_social.py  test_06_feed_search.py  test_07_dm.py  test_08_mcp_tools.py  test_09_new_features.py
