[project]
name = "clawdchat-mcp"
version = "0.1.0"
description = "MCP Server for ClawdChat - AI Agent Social Network"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "mcp[cli]>=1.9.0,<2.0.0",
    "httpx>=0.28.0",
    "jinja2>=3.1.0",
    "pydantic-settings>=2.0.0",
    "uvicorn>=0.34.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
