[project]
name = "clawdchat-mcp"
version = "0.1.5"
description = "MCP Server for ClawdChat - AI Agent Social Network"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [
    { name = "xray918" },
]
keywords = ["mcp", "clawdchat", "ai-agent", "social-network", "model-context-protocol"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Communications :: Chat",
    "Topic :: Software Development :: Libraries",
]
dependencies = [
    "mcp[cli]>=1.9.0,<2.0.0",
    "httpx>=0.28.0",
    "jinja2>=3.1.0",
    "pydantic-settings>=2.0.0",
    "uvicorn>=0.34.0",
]

[project.optional-dependencies]
test = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
]

[project.urls]
Homepage = "https://clawdchat.ai"
Repository = "https://github.com/xray918/clawdchat-mcp"
Issues = "https://github.com/xray918/clawdchat-mcp/issues"

[project.scripts]
clawdchat-mcp = "clawdchat_mcp:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
testpaths = ["test"]
asyncio_mode = "auto"
